# tcm-tools

./: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  requests  traces.0  traces.1
include/: Makefile  Makefile.am  Makefile.in  tcm_pkcs11.h  tcm_seal.h  tcm_tspi.h  tcm_unseal.h  tcm_utils.h
lib/: Makefile  Makefile.am  Makefile.in  tcm_log.c  tcm_pkcs11.c  tcm_tspi.c  tcm_unseal.c  tcm_utils.c
lib/.deps/: tcm_pkcs11.Plo  tcm_tspi.Plo  tcm_unseal.Plo  tpm_log.Plo  tpm_utils.Plo
m4/: Makefile  Makefile.in
man/: Makefile  Makefile.in
man/man1/: Makefile  Makefile.am  Makefile.in  tcm_sealdata.1  tcm_version.1  tcmtoken_import.1  tcmtoken_init.1  tcmtoken_objects.1  tcmtoken_protect.1  tcmtoken_setpasswd.1
man/man3/: Makefile  Makefile.am  Makefile.in  tcmUnsealFile.3  tcmUnsealStrerror.3
man/man8/: Makefile  Makefile.am  Makefile.in  tcm_changeownerauth.8  tcm_clear.8  tcm_createek.8  tcm_getpubek.8  tcm_nvdefine.8  tcm_nvdefine.pod  tcm_nvinfo.8  tcm_nvread.8  tcm_nvread.pod  tcm_nvrelease.8  tcm_nvrelease.pod  tcm_nvwrite.8  tcm_nvwrite.pod  tcm_resetdalock.8  tcm_restrictpubek.8  tcm_revokeek.8  tcm_selftest.8  tcm_setactive.8  tcm_setclearable.8  tcm_setenable.8  tcm_setoperatorauth.8  tcm_setownable.8  tcm_setpresence.8  tcm_takeownership.8
po/: Makefile  Makefile.in  POTFILES
po_/: POTFILES.in  tpm-tools.pot
src/: Makefile  Makefile.in
src/cmds/: Makefile  Makefile.am  Makefile.in  tcm_sealdata.c  tcm_sm3.c  tcm_sm4.c  tcm_unsealdata.c
src/cmds/.deps/: tpm_sealdata.Po  tpm_unsealdata.Po
src/data_mgmt/: Makefile  Makefile.am  Makefile.in  data_common.h  data_import.c  data_init.c  data_init.h  data_object.c  data_passwd.c  data_protect.c
src/data_mgmt/.deps/: data_import.Po  data_init.Po  data_object.Po  data_passwd.Po  data_protect.Po
src/tpm_mgmt/: Makefile  Makefile.am  Makefile.in  tcm_activate.c  tcm_changeauth.c  tcm_clear.c  tcm_clearable.c  tcm_createek.c  tcm_enable.c  tcm_getpubek.c  tcm_nvcommon.c  tcm_nvcommon.h  tcm_nvdefine.c  tcm_nvinfo.c  tcm_nvread.c  tcm_nvrelease.c  tcm_nvwrite.c  tcm_ownable.c  tcm_present.c  tcm_reset.c  tcm_resetdalock.c  tcm_restrictpubek.c  tcm_restrictsrk.c  tcm_revokeek.c  tcm_selftest.c  tcm_setoperatorauth.c  tcm_startup.c  tcm_takeownership.c  tcm_version.c
src/tpm_mgmt/.deps/: tcm_activate.Po  tcm_changeauth.Po  tcm_clear.Po  tcm_clearable.Po  tcm_createek.Po  tcm_enable.Po  tcm_getpubek.Po  tcm_nvdefine.Po  tcm_nvinfo.Po  tcm_nvread.Po  tcm_nvrelease.Po  tcm_nvwrite.Po  tcm_ownable.Po  tcm_present.Po  tcm_reset.Po  tcm_resetdalock.Po  tcm_restrictpubek.Po  tcm_restrictsrk.Po  tcm_revokeek.Po  tcm_selftest.Po  tcm_setoperatorauth.Po  tcm_startup.Po  tcm_takeownership.Po  tcm_version.Po  tpm_activate.Po  tpm_changeauth.Po  tpm_clear.Po  tpm_clearable.Po  tpm_createek.Po  tpm_enable.Po  tpm_getpubek.Po  tpm_nvcommon.Po  tpm_nvdefine.Po  tpm_nvinfo.Po  tpm_nvread.Po  tpm_nvrelease.Po  tpm_nvwrite.Po  tpm_ownable.Po  tpm_present.Po  tpm_reset.Po  (+9 more)
test/: tcm_changeownerauth01.sh
